Actions
Bug #10768
closedkgssapi: NULL pointer errors
Start date:
2019-04-13
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/gssapi/gssd_clnt_stubs.c: In function 'kgss_acquire_cred_wrapped': ../../common/gssapi/gssd_clnt_stubs.c:203:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *output_cred_handle = NULL; ^ ../../common/gssapi/gssd_clnt_stubs.c: In function 'kgss_release_cred_wrapped': ../../common/gssapi/gssd_clnt_stubs.c:558:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *cred_handle = NULL; ^ ../../common/gssapi/gssd_clnt_stubs.c:568:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *cred_handle = NULL; ^ In file included from ../../common/gssapi/gssd_clnt_stubs.c:31:0: ../../common/gssapi/gssd_clnt_stubs.c: In function 'kgss_process_context_token': ../../common/gssapi/include/mechglueP.h:724:40: error: pointer/integer type mismatch in conditional expression [-Werror] (((ctx) == GSS_C_NO_CONTEXT) ? (NULL) : KCTX_TO_CTXV(ctx)) ^ ../../common/gssapi/gssd_clnt_stubs.c:1201:26: note: in expansion of macro 'KGSS_CTX_TO_GSSD_CTXV' gssd_context_verifier = KGSS_CTX_TO_GSSD_CTXV(context_handle); ^~~~~~~~~~~~~~~~~~~~~ ../../common/gssapi/gssd_clnt_stubs.c:1201:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] gssd_context_verifier = KGSS_CTX_TO_GSSD_CTXV(context_handle); ^ ../../common/gssapi/gssd_clnt_stubs.c: In function 'kgss_delete_sec_context_wrapped': ../../common/gssapi/gssd_clnt_stubs.c:1300:20: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *context_handle = NULL; ^ ../../common/gssapi/gssd_clnt_stubs.c:1315:19: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *context_handle = NULL; ^ ../../common/gssapi/gssd_clnt_stubs.c: In function 'kgss_export_sec_context_wrapped': ../../common/gssapi/gssd_clnt_stubs.c:1424:20: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *context_handle = NULL; ^ ../../common/gssapi/gssd_clnt_stubs.c:1439:19: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *context_handle = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9c80534542e4b5924bcdb8adee652d01656e4889
commit 9c80534542e4b5924bcdb8adee652d01656e4889 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-24T06:23:05.000Z 10768 kgssapi: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions