usr/src/uts/common/gssapi/gssd_clnt_stubs.c
@@ -108,7 +108,7 @@ kgss_acquire_cred_wrapped(minor_status,
 {
 	CLIENT *clnt;
 
-	OM_uint32 	minor_status_temp;
+	OM_uint32	minor_status_temp;
 	gss_buffer_desc	external_name;
 	gss_OID		name_type;
 	enum clnt_stat	client_stat;
@@ -200,7 +200,7 @@ kgss_acquire_cred_wrapped(minor_status,
 		if (minor_status != NULL)
 			*minor_status = DEFAULT_MINOR_STAT;
 		if (output_cred_handle != NULL)
-			*output_cred_handle = NULL;
+			*output_cred_handle = 0;
 		if (actual_mechs != NULL)
 			*actual_mechs = NULL;
 		if (time_rec != NULL)
@@ -325,7 +325,7 @@ kgss_add_cred_wrapped(minor_status,
 {
 	CLIENT *clnt;
 
-	OM_uint32 	minor_status_temp;
+	OM_uint32	minor_status_temp;
 	gss_buffer_desc	external_name;
 	gss_OID		name_type;
 	int		i;
@@ -555,7 +555,7 @@ kgss_release_cred_wrapped(minor_status,
 		if (minor_status != NULL)
 			*minor_status = DEFAULT_MINOR_STAT;
 		if (cred_handle != NULL)
-			*cred_handle = NULL;
+			*cred_handle = 0;
 
 		killgssd_handle(clnt);
 		GSSLOG0(1, "kgss_release_cred: RPC call times out\n");
@@ -565,7 +565,7 @@ kgss_release_cred_wrapped(minor_status,
 	/* if the release succeeded, null out the cred_handle */
 
 	if (res.status == GSS_S_COMPLETE && cred_handle != NULL)
-		*cred_handle = NULL;
+		*cred_handle = 0;
 
 	/* copy the rpc results into the return arguments */
 
@@ -626,7 +626,7 @@ kgss_init_sec_context_wrapped(
 {
 	CLIENT *clnt;
 
-	OM_uint32 	minor_status_temp;
+	OM_uint32	minor_status_temp;
 	gss_buffer_desc	external_name;
 	gss_OID		name_type;
 
@@ -1297,7 +1297,7 @@ kgss_delete_sec_context_wrapped(void *private,
 		if (minor_status != NULL)
 			*minor_status = DEFAULT_MINOR_STAT;
 		if (context_handle != NULL)
-			*context_handle = NULL;
+			*context_handle = 0;
 		if (output_token != NULL)
 			output_token->length = 0;
 
@@ -1312,7 +1312,7 @@ kgss_delete_sec_context_wrapped(void *private,
 		*minor_status = res.minor_status;
 
 	if (res.context_handle.GSS_CTX_ID_T_len == 0)
-		*context_handle = NULL;
+		*context_handle = 0;
 	else
 		*context_handle =
 		    *((gssd_ctx_id_t *)res.context_handle.GSS_CTX_ID_T_val);
@@ -1421,7 +1421,7 @@ kgss_export_sec_context_wrapped(minor_status,
 		if (minor_status != NULL)
 			*minor_status = DEFAULT_MINOR_STAT;
 		if (context_handle != NULL)
-			*context_handle = NULL;
+			*context_handle = 0;
 		if (output_token != NULL)
 			output_token->length = 0;
 		killgssd_handle(clnt);
@@ -1436,7 +1436,7 @@ kgss_export_sec_context_wrapped(minor_status,
 		*minor_status = res.minor_status;
 
 	if (res.context_handle.GSS_CTX_ID_T_len == 0)
-		*context_handle = NULL;
+		*context_handle = 0;
 	else
 		*context_handle =
 		    *((gssd_ctx_id_t *)res.context_handle.GSS_CTX_ID_T_val);
@@ -1515,7 +1515,7 @@ kgss_import_sec_context(minor_status,
 
 OM_uint32 *		minor_status;
 const gss_buffer_t	interprocess_token;
-gss_ctx_id_t 		context_handle;
+gss_ctx_id_t		context_handle;
 
 {
 OM_uint32 status;
@@ -2187,7 +2187,7 @@ kgss_inquire_cred_wrapped(minor_status,
 {
 	CLIENT *clnt;
 
-	OM_uint32 	minor_status_temp;
+	OM_uint32	minor_status_temp;
 	gss_buffer_desc	external_name;
 	gss_OID_desc	name_type;
 	int		i;
